--- a/about.html
+++ b/about.html
@@ -415,10 +415,10 @@
                         <div class="awards-img-box">
                             <div class="round-box"></div>
                             <div class="shape1">
-                                <img src="assets/images/resources/trophy-shape-1.png" alt="">
+                                <img style="position: relative;left: 15px;" src="assets/images/resources/trophy-shape-1.png" alt="">
                             </div>
                             <div class="shape2">
-                                <img src="assets/images/resources/trophy-shape-2.png" alt="">
+                                <img style="position: relative;left: 15px;" src="assets/images/resources/trophy-shape-2.png" alt="">
                             </div>
                             <div class="inner">
                                 <img src="assets/images/resources/trophy.png" alt="">
