--- a/contact.html
+++ b/contact.html
@@ -260,7 +260,7 @@
         <div class="info-text">
           <p>Front Desk</p>
           <h3><a style="text-decoration: none;color: #333;" href="tel:+44 (0) 003000000">+44 (0) 003000000</a></h3>
-          <h3><a href="mailto:info@harborviewbank.com">info@harborviewbank.com</a></h3>
+          <h3><a style="text-decoration: none;color: #333;" href="mailto:info@harborviewbank.com">info@harborviewbank.com</a></h3>
         </div>
       </li>
     </ul>
