--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -423,7 +423,7 @@
                 }
                 
             </style>
-   <div class="mobile-nav__wrapper" style="background-color: rgba(250, 190, 118, 0.945);width:340px;height:500px">
+   <div class="mobile-nav__wrapper" style="background-color: rgba(250, 190, 118, 0.945);width:340px;height:500px; z-index: 9999;">
 <div style="display: hidden ;" class="mobile-nav__overlay mobile-nav__toggler"></div>
         <div class="mobile-nav__content">
             <span class="mobile-nav__close mobile-nav__toggler">
