--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -185,7 +185,7 @@
         </div><!-- /.stricky-header -->
 
         <!--Start breadcrumb area-->
-        <section style="z-index: 0;" class="breadcrumb-area">
+        <section style="z-index: 0 !important;" class="breadcrumb-area">
             <div class="breadcrumb-area-bg"
                 style="background-image: url(assets/images/backgrounds/slogan-content-box-bg11.jpg);"></div>
             <div class="container">
