--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -115,7 +115,7 @@
                         <div class="main-menu__wrapper-inner">
 
                             <div class="main-menu-style1-left">
-                                <div class="main-menu-box">
+                                <div style="z-index: 0 !important;" class="main-menu-box">
                                     <a href="#" class="mobile-nav__toggler">
                                         <i class="fas fa-bars"></i>
 
