--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -62,11 +62,11 @@
     
     <!-- End preloader -->
 
-    <div class="page-wrapper">
-        <header class="main-header main-header-style1">
+    <div style="z-index: 0 !important;" class="page-wrapper">
+        <header style="z-index: 0 !important;" class="main-header main-header-style1">
 
             <!--Start Main Header Style1 Top-->
-            <div class="main-header-style1-top" style="padding-bottom:70px">
+            <div style="z-index: 0 !important;" class="main-header-style1-top" style="padding-bottom:70px">
                 <div class="auto-container">
                     <div class="outer-box">
                         <!--Start Main Header Style1 Top Left-->
