--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -63,10 +63,10 @@
     <!-- End preloader -->
 
     <div style="z-index: 0 !important;" class="page-wrapper">
-        <header style="z-index: 0 !important;" class="main-header main-header-style1">
+        <header class="main-header main-header-style1">
 
             <!--Start Main Header Style1 Top-->
-            <div style="z-index: 0 !important;" class="main-header-style1-top" style="padding-bottom:70px">
+            <div class="main-header-style1-top" style="padding-bottom:70px">
                 <div class="auto-container">
                     <div class="outer-box">
                         <!--Start Main Header Style1 Top Left-->
@@ -86,7 +86,7 @@
                         <!--End Main Header Style1 Top Left-->
 
                         <!--Start Main Header Style1 Top Right-->
-                        <div style="z-index: 0 !important;" class="main-header-style1-top__right">
+                        <div class="main-header-style1-top__right">
                             <div class="header-menu-style1">
                                 <ul>
                                     <li><a href="contact.html">Contact Us</a></li>
@@ -109,7 +109,7 @@
             </div>
             <!--End Main Header Style1 Top-->
 
-            <nav style="z-index: 0 !important;"  class="main-menu main-menu-style1">
+            <nav class="main-menu main-menu-style1">
                 <div class="main-menu__wrapper clearfix">
                     <div class="container">
                         <div class="main-menu__wrapper-inner">
@@ -156,7 +156,7 @@
             </nav>
 
             <!--Start Main Header Style1 Bottom-->
-            <div style="z-index: 0 !important;" class="main-header-style1-bottom">
+            <div class="main-header-style1-bottom">
                 <div class="auto-container">
                     <div class="outer-box">
                         <div class="update-box">
