--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -63,7 +63,7 @@
     <!-- End preloader -->
 
     <div style="z-index: 0 !important;" class="page-wrapper">
-        <header class="main-header main-header-style1">
+        <header style="z-index: 0 !important;"class="main-header main-header-style1">
 
             <!--Start Main Header Style1 Top-->
             <div class="main-header-style1-top" style="padding-bottom:70px">
