--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -151,44 +151,18 @@ body, html {
   color: #fff;
   text-decoration: underline;
 }
-.spark-field {
+.hero {
+  position: relative;
+  overflow: hidden;
+}
+
+#sparkCanvas {
   position: absolute;
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  z-index: 1; /* behind login card */
-  pointer-events: none;
-}
-
-/* Spark element */
-.spark {
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: radial-gradient(circle, #fff, transparent);
-  opacity: 0.8;
-  filter: blur(3px);
-  will-change: transform, opacity;
-  animation: drift var(--duration) linear infinite,
-             flicker var(--flicker) ease-in-out infinite alternate;
-}
-
-/* Random drift direction */
-@keyframes drift {
-  from {
-    transform: translate(0, 0) scale(1);
-  }
-  to {
-    transform: translate(var(--x), var(--y)) scale(0.8);
-  }
-}
-
-/* Flicker & twinkle */
-@keyframes flicker {
-  0%, 100% { opacity: 0.3; transform: scale(1); }
-  50% { opacity: 1; transform: scale(1.5); }
+  z-index: 1; /* behind the login card */
+  display: block;
 }
 
   </style>
@@ -196,7 +170,7 @@ body, html {
 <body>
   <div class="hero">
     <div class="overlay"></div>
-    <div class="spark-field"></div>
+    <canvas id="sparkCanvas"></canvas>
     <!-- Your login card -->
     <div class="login-card">
       <div class="logo">
@@ -330,47 +304,62 @@ body, html {
   };
 </script>
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const field = document.querySelector('.spark-field');
+  const canvas = document.getElementById('sparkCanvas');
+  const ctx = canvas.getContext('2d');
 
-    const NUM_SPARKS = 120; // More = richer
+  let width = canvas.width = window.innerWidth;
+  let height = canvas.height = window.innerHeight;
 
-    for (let i = 0; i < NUM_SPARKS; i++) {
-      const spark = document.createElement('div');
-      spark.classList.add('spark');
-
-      // Random position
-      spark.style.top = `${Math.random() * 100}%`;
-      spark.style.left = `${Math.random() * 100}%`;
-
-      // Random drift distance
-      const x = (Math.random() * 200 - 100) + '%'; // -100% to +100% viewport
-      const y = (Math.random() * 200 - 100) + '%';
-
-      // Random durations
-      const duration = 15 + Math.random() * 30; // 15s to 45s drift
-      const flicker = 2 + Math.random() * 4; // 2s to 6s flicker
-
-      // Random delay so they don't all move at once
-      const delay = `${Math.random() * duration}s`;
-
-      // Custom properties
-      spark.style.setProperty('--x', x);
-      spark.style.setProperty('--y', y);
-      spark.style.setProperty('--duration', `${duration}s`);
-      spark.style.setProperty('--flicker', `${flicker}s`);
-      spark.style.animationDelay = `${delay}, ${Math.random() * flicker}s`;
-
-      // Random size for depth effect
-      const size = 4 + Math.random() * 8; // 4px to 12px
-      spark.style.width = `${size}px`;
-      spark.style.height = `${size}px`;
-      spark.style.filter = `blur(${Math.random() * 2 + 2}px)`;
-
-      field.appendChild(spark);
-    }
+  window.addEventListener('resize', () => {
+    width = canvas.width = window.innerWidth;
+    height = canvas.height = window.innerHeight;
   });
-</script>
 
+  const NUM_PARTICLES = 120;
+  const particles = [];
+
+  for (let i = 0; i < NUM_PARTICLES; i++) {
+    particles.push({
+      x: Math.random() * width,
+      y: Math.random() * height,
+      radius: Math.random() * 2 + 1,
+      dx: (Math.random() - 0.5) * 0.5,
+      dy: (Math.random() - 0.5) * 0.5,
+      opacity: Math.random(),
+      flickerSpeed: Math.random() * 0.02 + 0.005
+    });
+  }
+
+  function animate() {
+    ctx.clearRect(0, 0, width, height);
+    particles.forEach(p => {
+      // Update position
+      p.x += p.dx;
+      p.y += p.dy;
+
+      // Bounce on edges
+      if (p.x < 0 || p.x > width) p.dx *= -1;
+      if (p.y < 0 || p.y > height) p.dy *= -1;
+
+      // Flicker effect
+      p.opacity += p.flickerSpeed;
+      if (p.opacity >= 1 || p.opacity <= 0.3) p.flickerSpeed *= -1;
+
+      // Draw glow
+      const gradient = ctx.createRadialGradient(p.x, p.y, 0, p.x, p.y, p.radius * 4);
+      gradient.addColorStop(0, `rgba(255, 255, 255, ${p.opacity})`);
+      gradient.addColorStop(1, 'rgba(255, 255, 255, 0)');
+
+      ctx.fillStyle = gradient;
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.radius * 4, 0, Math.PI * 2, false);
+      ctx.fill();
+    });
+
+    requestAnimationFrame(animate);
+  }
+
+  animate();
+</script>
 </body>
 </html>
