--- a/stocks.html
+++ b/stocks.html
@@ -205,174 +205,156 @@
         <!--End breadcrumb area-->
 
         <!--Start Applying Process Area-->
-        <section class="applying-process-area">
-            <div class="container">
-                <div class="sec-title text-center">
-                    <h2>Stock Business</h2>
-                    <div class="sub-title">
-                        <p>Customised soutions for all your Stock Banking.</p>
-                    </div>
-                </div>
-                <div class="row">
+       <section class="applying-process-area">
+  <div class="container">
+    <div class="sec-title text-center">
+      <h2>Stock Investment Process</h2>
+      <div class="sub-title">
+        <p>Customized solutions for all your stock banking needs.</p>
+      </div>
+    </div>
 
-                    <div class="col-xl-12">
-                        <div class="applying-process-step-box-top"></div>
-                    </div>
-                    <!--Start Single Applying Process box-->
-                    <div class="col-xl-4 col-lg-4">
-                        <div class="single-applying-process-box">
-                            <div class="applying-process-single-step-box">01</div>
-                            <h3>Apply Here</h3>
-                            <p>Perfectly simple & easy to distinguish
-                                of choice is prevents.</p>
-                        </div>
-                    </div>
-                    <!--End Single Applying Process box-->
-                    <!--Start Single Applying Process box-->
-                    <div class="col-xl-4 col-lg-4">
-                        <div class="single-applying-process-box">
-                            <div class="applying-process-single-step-box">02</div>
-                            <h3>Get Call Back</h3>
-                            <p>Claims off duty or the obligations it will
-                                pleasures be repudiated.</p>
-                        </div>
-                    </div>
-                    <!--End Single Applying Process box-->
-                    <!--Start Single Applying Process box-->
-                    <div class="col-xl-4 col-lg-4">
-                        <div class="single-applying-process-box">
-                            <div class="applying-process-single-step-box">03</div>
-                            <h3>Process Your Request</h3>
-                            <p>Demoralized by charms pleasure of the
-                                they cannot and trouble.</p>
-                        </div>
-                    </div>
-                    <!--End Single Applying Process box-->
-                </div>
-            </div>
-        </section>
-        <!--End Applying Process Area-->
+    <div class="row justify-content-center">
+      <!-- Step 1 -->
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-applying-process-box">
+          <div class="applying-process-single-step-box">01</div>
+          <h3>Apply for Stocks</h3>
+          <p>Start by submitting your interest in stock investment through our easy application.</p>
+        </div>
+      </div>
+
+      <!-- Step 2 -->
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-applying-process-box">
+          <div class="applying-process-single-step-box">02</div>
+          <h3>Expert Consultation</h3>
+          <p>Get a call back from our dedicated stock advisors to guide your investment plan.</p>
+        </div>
+      </div>
+
+      <!-- Step 3 -->
+      <div class="col-xl-4 col-lg-4 col-md-6">
+        <div class="single-applying-process-box">
+          <div class="applying-process-single-step-box">03</div>
+          <h3>Invest & Grow</h3>
+          <p>We process your request and help you manage your stocks for optimal returns.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+ <!--End Applying Process Area-->
 
         <!--Start Apply Form Area-->
-        <section class="apply-form-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="apply-form-box clearfix">
-                            <div class="apply-form-box-bg"
-                                style="background-image: url(assets/images/resources/apply-form-box-bg.jpg);"></div>
-                            <div class="apply-form-box__content">
-                                <div class="sec-title">
-                                    <h2>Send Your Request &<br> Get Call Back</h2>
-                                    <div class="sub-title">
-                                        <p>Fill all the necessary details and Get call from experts.</p>
-                                    </div>
-                                </div>
+      <section class="apply-form-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="apply-form-box clearfix">
+          <div class="apply-form-box-bg"
+            style="background-image: url(assets/images/resources/apply-form-box-bg.jpg); background-size: cover; background-position: center;">
+          </div>
 
-                                <form id="apply-form" name="apply_form" class="default-form2" action="index.html"
-                                    method="post">
-
-                                    <div class="row">
-                                        <div class="col-xl-6">
-                                            <div class="form-group">
-                                                <div class="input-box">
-                                                    <input type="text" name="form_name" id="formName"
-                                                        placeholder="Your Name" required="">
-                                                    <div class="icon">
-                                                        <i class="fas fa-user"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-6">
-                                            <div class="form-group">
-                                                <div class="input-box">
-                                                    <input type="email" name="form_email" id="formEmail"
-                                                        placeholder="Email" required="">
-                                                    <div class="icon">
-                                                        <i class="fas fa-envelope-open"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-xl-6">
-                                            <div class="form-group">
-                                                <div class="input-box">
-                                                    <input type="text" name="form_phone" value="" id="formPhone"
-                                                        placeholder="Phone">
-                                                    <div class="icon">
-                                                        <i class="fas fa-phone-alt"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-6">
-                                            <div class="form-group">
-                                                <div class="select-box clearfix">
-                                                    <select class="wide">
-                                                        <option data-display="State">
-                                                            State
-                                                        </option>
-                                                        <option value="1">Alaska</option>
-                                                        <option value="2">Florida</option>
-                                                        <option value="3">Georgia</option>
-                                                        <option value="4">Indiana</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-xl-6">
-                                            <div class="form-group">
-                                                <div class="select-box clearfix">
-                                                    <select class="wide">
-                                                        <option data-display="City">
-                                                            City
-                                                        </option>
-                                                        <option value="1">Alaska</option>
-                                                        <option value="2">Florida</option>
-                                                        <option value="3">Georgia</option>
-                                                        <option value="4">Indiana</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-xl-6">
-                                            <div class="form-group">
-                                                <div class="input-box">
-                                                    <input type="text" name="date" placeholder="Date" id="datepicker">
-                                                    <div class="icon">
-                                                        <i class="fas fa-calendar"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-xl-12">
-                                            <div class="button-box">
-                                                <button class="btn-one" type="submit">
-                                                    <span class="txt">
-                                                        Send Request
-                                                    </span>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </form>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          <div class="apply-form-box__content">
+            <div class="sec-title">
+              <h2>Request a Call Back for Stock Investment</h2>
+              <div class="sub-title">
+                <p>Fill in your details and our stock experts will reach out shortly.</p>
+              </div>
             </div>
+
+            <form id="apply-form" name="apply_form" class="default-form2" action="success.html" method="post">
+
+              <div class="row">
+                <div class="col-xl-6 col-md-6">
+                  <div class="form-group">
+                    <div class="input-box">
+                      <input type="text" name="form_name" id="formName" placeholder="Your Full Name" required>
+                      <div class="icon">
+                        <i class="fas fa-user"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xl-6 col-md-6">
+                  <div class="form-group">
+                    <div class="input-box">
+                      <input type="email" name="form_email" id="formEmail" placeholder="Your Email" required>
+                      <div class="icon">
+                        <i class="fas fa-envelope"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xl-6 col-md-6">
+                  <div class="form-group">
+                    <div class="input-box">
+                      <input type="text" name="form_phone" id="formPhone" placeholder="Phone Number">
+                      <div class="icon">
+                        <i class="fas fa-phone-alt"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xl-6 col-md-6">
+                  <div class="form-group">
+                    <div class="select-box clearfix">
+                      <select name="form_state" class="wide" required>
+                        <option value="">Select State</option>
+                        <option>New York</option>
+                        <option>Florida</option>
+                        <option>California</option>
+                        <option>Georgia</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xl-6 col-md-6">
+                  <div class="form-group">
+                    <div class="select-box clearfix">
+                      <select name="form_city" class="wide" required>
+                        <option value="">Select City</option>
+                        <option>New York</option>
+                        <option>Miami</option>
+                        <option>Los Angeles</option>
+                        <option>Atlanta</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xl-6 col-md-6">
+                  <div class="form-group">
+                    <div class="input-box">
+                      <input type="text" name="date" placeholder="Preferred Call Date" id="datepicker">
+                      <div class="icon">
+                        <i class="fas fa-calendar"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-xl-12">
+                  <div class="button-box text-center">
+                    <button class="btn-one" type="submit">
+                      <span class="txt">Request Call Back</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+            </form>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
             <style>
 
@@ -546,7 +528,109 @@ p {
 .col-xl-6{
     width:70%;
 }
+.applying-process-area {
+  padding: 60px 0;
+}
 
+.single-applying-process-box {
+  text-align: center;
+  padding: 30px;
+  background: #fff;
+  border: 1px solid #eee;
+  border-radius: 8px;
+  margin-bottom: 30px;
+  transition: transform 0.3s;
+}
+
+.single-applying-process-box:hover {
+  transform: translateY(-5px);
+}
+
+.applying-process-single-step-box {
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  background: #f88119;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 20px;
+  margin: 0 auto 20px;
+}
+
+.apply-form-area {
+  padding: 60px 0;
+  position: relative;
+}
+
+.apply-form-box {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.apply-form-box-bg {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.2;
+}
+
+.apply-form-box__content {
+  position: relative;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0.95);
+  border-radius: 8px;
+}
+
+.apply-form-box .sec-title h2 {
+  margin-bottom: 15px;
+}
+
+.apply-form-box .sub-title p {
+  margin-bottom: 30px;
+}
+
+.input-box input,
+.select-box select {
+  width: 100%;
+  padding: 12px 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.input-box .icon,
+.select-box .icon {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.button-box .btn-one {
+  background: #f88119;
+  color: #fff;
+  padding: 15px 40px;
+  border: none;
+  border-radius: 30px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.button-box .btn-one:hover {
+  background: #ff9900;
+}
+
+@media (max-width: 768px) {
+  .single-applying-process-box {
+    margin-bottom: 20px;
+  }
+
+  .apply-form-box__content {
+    padding: 20px;
+  }
+}
             </style>
         </section>
         <!--End Apply Form Area-->
