--- a/stocks.html
+++ b/stocks.html
@@ -342,7 +342,7 @@
                 <div class="col-xl-12">
                   <div class="button-box text-center">
                     <button class="btn-one" type="submit">
-                      <span class="txt">Request Call Back</span>
+                      <a style="text-decoration: none;" href="success.html"> <span class="txt">Request Call Back</span></a>
                     </button>
                   </div>
                 </div>
