--- a/stocks.html
+++ b/stocks.html
@@ -303,7 +303,7 @@
                 <div class="col-xl-6 col-md-6">
                   <div class="form-group">
                     <div class="select-box clearfix">
-                      <select name="form_state" class="wide" required>
+                      <select name="form_state" class="wide" >
                         <option value="">Select State</option>
                         <option>New York</option>
                         <option>Florida</option>
@@ -317,7 +317,7 @@
                 <div class="col-xl-6 col-md-6">
                   <div class="form-group">
                     <div class="select-box clearfix">
-                      <select name="form_city" class="wide" required>
+                      <select name="form_city" class="wide">
                         <option value="">Select City</option>
                         <option>New York</option>
                         <option>Miami</option>
