--- a/stocks.html
+++ b/stocks.html
@@ -264,7 +264,7 @@
               </div>
             </div>
 
-            <form id="apply-form" name="apply_form" class="default-form2" href="success.html" method="post">
+            <form id="apply-form" name="apply_form" class="default-form2" href="success.html" >
 
               <div class="row">
                 <div class="col-xl-6 col-md-6">
@@ -341,7 +341,7 @@
 
                 <div class="col-xl-12">
                   <div class="button-box text-center">
-                    <a style="text-decoration: none;" href="success.html"></a><button class="btn-one" type="submit">
+                    <a style="text-decoration: none;" href="success.html"></a><button class="btn-one">
                        <span class="txt">Request Call Back</span>
                     </button></a>
                   </div>
