--- a/stocks.html
+++ b/stocks.html
@@ -264,7 +264,7 @@
               </div>
             </div>
 
-            <form id="apply-form" name="apply_form" class="default-form2" href="success.html" >
+            <form name="apply_form" class="default-form2">
 
               <div class="row">
                 <div class="col-xl-6 col-md-6">
